@@ -2,7 +2,7 @@
 # $Id$
 #
 # This is the configuration file for the LDAP nameservice
-# switch library.
+# switch library and the LDAP PAM module.
 #
 # To contact the author, mail lukeh@padl.com.
 #
@@ -16,7 +16,7 @@
 host 127.0.0.1
 
 # The distinguished name of the search base.
-base o=Xedoc Software Development,c=AU
+base DC=PADL,DC=COM
 
 # The LDAP version to use (defaults to 2)
 #ldap_version 3
